--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     display: table;
     width: 100%;
     height: 100%;
-z-index: 9;
+    z-index: 9;
 }
 
 h1 {
@@ -54,19 +54,46 @@ h2 {
 
 .menu {
     list-style: none;
-    position: absolute;
-    top: 10px;
-    right: 30px;
+    position: fixed;
+    top: 0px;
     z-index: 10;
     cursor: pointer;
+    background: white;
+    width: 100%;
+    margin-top: 0px;
 }
 
-.links{
-    float: left ;
-padding-top: 5px;
-padding-left: 9px;
-padding-right: 9px;
-padding-bottom: 5px;
-font-family: fantasy;
-font-size: 20px;
+.links {
+    display: inline;
+    padding-left: 33px;
+    padding-right: 25px;
+    font-family: fantasy;
+    font-size: 20px;
+}
+
+.links:hover {
+    font-size: 25px;
+    text-decoration: underline;
+}
+
+#writings a {
+    text-decoration: underline !important;
+    color: green !important;
+}
+
+#contact {
+    background: lightgray;
+
+}
+
+.contact_1 h3 {
+    display: inline;
+}
+
+a {
+    text-decoration: none;
+}
+
+#contact iframe{
+    width: 100%;
 }
